made it open in a new window

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <a name="welcome-to-my-portfolio" class="anchor" href="#welcome-to-my-portfolio"><span class="octicon octicon-link"></span></a>Welcome to my Portfolio.</h3>
 
 <p>Here are some links to projects I've made.</p>
-<p><a href="./WordArtTool/WordArtTool.htm">WordArtTool</a> - a tool I wrote for my wife to help her create word art</p>
+<p><a target="_blank" href="./WordArtTool/WordArtTool.htm">WordArtTool</a> - a tool I wrote for my wife to help her create word art</p>
       </section>
     </div>
 
