reformatting the link list

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-my-portfolio" class="anchor" href="#welcome-to-my-portfolio"><span class="octicon octicon-link"></span></a>Welcome to my Portfolio.</h3>
+          <a name="welcome-to-my-portfolio" class="anchor" href="#welcome-to-my-portfolio"><span class="octicon octicon-link"></span></a>Welcome to my Portfolio.
+        </h3>
 
-<p>Here are some links to projects I've made.</p>
-<p><a target="_blank" href="./WordArtTool/WordArtTool.htm">WordArtTool</a> - a tool I wrote for my wife to help her create word art</p>
+        <p>Here are some links to projects I've made.</p>
+        <ul>
+          <li><a target="_blank" href="./WordArtTool/WordArtTool.htm">WordArtTool</a> - a tool I wrote for my wife to help her create word art</li>
+        </ul>
       </section>
     </div>
 
