added some more links

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <p>Here are some links to projects I've made.</p>
         <ul>
           <li><a target="_blank" href="./WordArtTool/WordArtTool.htm">WordArtTool</a> - a tool I wrote for my wife to help her create word art</li>
+          <li><a target="_blank" href="./HtmlTools/LayoutTests/Test.htm">Fixed Size Div</a> - This is a test of an interesting responsive div layout I've played with off and on for quite a while</li>
+          <li><a target="_blank" href="./HtmlTools/LayoutTests/tableTests.htm">Fixed Header 'Table'</a> - This is a test to see if I could create a 'table' layout with a fixed header</li>
         </ul>
       </section>
     </div>
