adding Chain Reaction to my portfolio

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <li><a target="_blank" href="./WordArtTool/WordArtTool.htm">WordArtTool</a> - a tool I wrote for my wife to help her create word art</li>
           <li><a target="_blank" href="./HtmlTools/LayoutTests/test.htm">Fixed Size Div</a> - This is a test of an interesting responsive div layout I've played with off and on for quite a while</li>
           <li><a target="_blank" href="./HtmlTools/LayoutTests/tableTests.htm">Fixed Header 'Table'</a> - This is a test to see if I could create a 'table' layout with a fixed header</li>
+          <li><a target="_blank" href="./ChainReactionClone/ChainReaction.html">Chain Reaction</a> - a clone of a fun game from my distant past</li>
           <li><a target="_blank" href="./other/">Other</a> - This holds a bunch of stuff that doesn't fit anywhere else</li>
         </ul>
       </section>
